Ajout des routes payers
